src/librustdoc/html/static/rustdoc.css
/* ... */
ol, ul {
	padding-left: 25px;
}
ul ul, ol ul, ul ol, ol ol {
	margin-bottom: 0;
}

p {
	margin: 0 0 .6em 0;
}

summary {
	outline: none;
}

code, pre {
	font-family: "Source Code Pro", Menlo, Monaco, Consolas, "DejaVu Sans Mono", Inconsolata, monospace;
	white-space: pre-wrap;
}
.docblock code, .docblock-short code {
	border-radius: 3px;
	padding: 0 0.2em;
}
.docblock pre code, .docblock-short pre code, .docblock code.spotlight {
	padding: 0;
}
.docblock code.spotlight :last-child {
	padding-bottom: 0.6em;
}
pre {
	padding: 14px;
}

.source .content pre {
	padding: 20px;
}

img {
	max-width: 100%;
}

.source .content {
	margin-top: 50px;
	max-width: none;
	overflow: visible;
	margin-left: 0px;
	min-width: 70em;
}

nav.sub {
	font-size: 16px;
	text-transform: uppercase;
}

.sidebar {
	width: 200px;
	position: fixed;
	left: 0;
	top: 0;
	height: 100vh;
	overflow: auto;
	z-index: 1;
}

.sidebar .current {
	margin-right: -20px;
}

.content, nav { max-width: 960px; }

/* Everything else */

.js-only, .hidden { display: none !important; }

.sidebar img {
	margin: 20px auto;
	display: block;
	margin-top: 10px;
}

.sidebar .location {
	border: 1px solid;
	font-size: 17px;
	margin: 30px 10px 20px 10px;
	text-align: center;
	word-wrap: break-word;
}

.sidebar .version {
	font-size: 15px;
	text-align: center;
	border-bottom: #DDDDDD 1px solid;
	overflow-wrap: break-word;
	word-wrap: break-word; /* deprecated */
	word-break: break-word; /* Chrome, non-standard */
}

.location:empty {
	border: none;
}

.location a:first-child { font-weight: 500; }

.block {
	padding: 0;
	margin-bottom: 14px;
}
.block h2, .block h3 {
	margin-top: 0;
	margin-bottom: 8px;
	text-align: center;
}
.block ul, .block li {
	margin: 0 10px;
	padding: 0;
	list-style: none;
}

.block a {
	display: block;
	text-overflow: ellipsis;
	overflow: hidden;
	line-height: 15px;
	padding: 7px 5px;
	font-size: 14px;
	font-weight: 300;
	transition: border 500ms ease-out;
}

.sidebar-title {
	border-top: 1px solid #777;
	border-bottom: 1px solid #777;
	text-align: center;
	font-size: 17px;
	margin-bottom: 5px;
}

.sidebar-links {
	margin-bottom: 15px;
}

.sidebar-links > a {
	padding-left: 10px;
	width: 100%;
}

.content {
	padding: 15px 0;
}

.source .content pre.rust {
	white-space: pre;
	overflow: auto;
	padding-left: 0;
}
#search {
	margin-left: 230px;
}
.content pre.line-numbers {
	float: left;
	border: none;
	position: relative;

	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.line-numbers span { cursor: pointer; }

.docblock-short p {
	display: inline;
}

.docblock-short.nowrap {
	display: block;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.docblock-short p {
	overflow: hidden;
	text-overflow: ellipsis;
	margin: 0;
}
.docblock-short code { white-space: nowrap; }

.docblock h1, .docblock h2, .docblock h3, .docblock h4, .docblock h5 {
	border-bottom: 1px solid;
}

#main > .docblock h1 { font-size: 1.3em; }
#main > .docblock h2 { font-size: 1.15em; }
#main > .docblock h3, #main > .docblock h4, #main > .docblock h5 { font-size: 1em; }

.docblock h1 { font-size: 1em; }
.docblock h2 { font-size: 0.95em; }
.docblock h3, .docblock h4, .docblock h5 { font-size: 0.9em; }

.docblock {
	margin-left: 24px;
	position: relative;
}

.content .out-of-band {
	font-size: 23px;
	margin: 0px;
	padding: 0px;
	text-align: right;
	display: inline-block;
	font-weight: normal;
	position: absolute;
	right: 0;
}

h3.impl > .out-of-band {
	font-size: 21px;
}

h4.method > .out-of-band {
	font-size: 19px;
}

ul.item-list > li > .out-of-band {
	font-size: 19px;
}

h4 > code, h3 > code, .invisible > code {
	position: inherit;
}

.in-band, code {
	z-index: 5;
}

.invisible {
	background: rgba(0, 0, 0, 0);
	width: 100%;
	display: inline-block;
}

.content .in-band {
	margin: 0px;
	padding: 0px;
	display: inline-block;
}

.in-band > code {
	display: inline-block;
}

#main { position: relative; }
#main > .since {
	top: inherit;
	font-family: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.content table {
	border-spacing: 0 5px;
	border-collapse: separate;
}
.content td { vertical-align: top; }
.content td:first-child { padding-right: 20px; }
.content td p:first-child { margin-top: 0; }
.content td h1, .content td h2 { margin-left: 0; font-size: 1.1em; }

.docblock table {
	border: 1px solid;
	margin: .5em 0;
	border-collapse: collapse;
	width: 100%;
}

.docblock table td {
	padding: .5em;
	border-top: 1px dashed;
	border-bottom: 1px dashed;
}

.docblock table th {
	padding: .5em;
	text-align: left;
	border-top: 1px solid;
	border-bottom: 1px solid;
}

.fields + table {
	margin-bottom: 1em;
}

.content .item-list {
	list-style-type: none;
	padding: 0;
}

.content .item-list li { margin-bottom: 1em; }

.content .multi-column {
	-moz-column-count: 5;
	-moz-column-gap: 2.5em;
	-webkit-column-count: 5;
	-webkit-column-gap: 2.5em;
	column-count: 5;
	column-gap: 2.5em;
}
.content .multi-column li { width: 100%; display: inline-block; }

.content .method {
	font-size: 1em;
	position: relative;
}
/* Shift "where ..." part of method or fn definition down a line */
.content .method .where,
.content .fn .where,
.content .where.fmt-newline {
	display: block;
	color: #4E4C4C;
	font-size: 0.8em;
}

.content .methods > div:not(.important-traits) { margin-left: 40px; }

.content .impl-items .docblock, .content .impl-items .stability {
	margin-left: 40px;
	margin-bottom: .6em;
}
.content .impl-items .method, .content .impl-items > .type, .impl-items > .associatedconstant {
	margin-left: 20px;
}

.content .stability code {
	font-size: 90%;
}

nav {
	border-bottom: 1px solid;
	padding-bottom: 10px;
	margin-bottom: 10px;
}
nav.main {
	padding: 20px 0;
	text-align: center;
}
nav.main .current {
	border-top: 1px solid;
	border-bottom: 1px solid;
}
nav.main .separator {
	border: 1px solid;
	display: inline-block;
	height: 23px;
	margin: 0 20px;
}
nav.sum { text-align: right; }
/* ... */

